--- a/ContactUs.css
+++ b/ContactUs.css
@@ -113,7 +113,7 @@ main {
 
 .handle-item svg {
   fill: white;
-  background: rgba(22, 23, 25, 0.832);
+  background: #1717173e;
   border-radius: 50%;
   padding: 0.5rem;
   border: 1px solid #444;
